# ICE-BA-ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_thirdparty.sh  package.xml
App/: CMakeLists.txt  EuRoC_test.cpp  ICE-BA-ROS.cpp  InputSequence.h  run_backend.cpp
Backend/: CMakeLists.txt
Backend/BundleAdjustment/: GlobalBundleAdjustor.cpp  GlobalBundleAdjustor.h  GlobalBundleAdjustorDL.cpp  GlobalBundleAdjustorDebug.cpp  GlobalBundleAdjustorGN.cpp  GlobalBundleAdjustorIO.cpp  LocalBundleAdjustor.cpp  LocalBundleAdjustor.h  LocalBundleAdjustorDL.cpp  LocalBundleAdjustorDebug.cpp  LocalBundleAdjustorGN.cpp  LocalBundleAdjustorIO.cpp
Backend/Geometry/: Camera.cpp  Camera.h  CameraPrior.cpp  CameraPrior.h  CameraTrajectory.h  Depth.cpp  Depth.h  IMU.cpp  IMU.h  Intrinsic.cpp  Intrinsic.h  M-Estimator.h  Point.h  Rigid.h  Rotation.h
Backend/IBA/: IBA.cpp  IBA.h  IBA_config.h  IBA_datatype.h  IBA_internal.h  Parameter.cpp  Parameter.h  targetver.h
Backend/LinearAlgebra/: LinearSystem.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Matrix6x6.h  Matrix9x9.h  MatrixMxN.h  Vector3.h  VectorN.h
Backend/Map/: Feature.cpp  Feature.h  Frame.h  GlobalMap.cpp  GlobalMap.h  LocalMap.cpp  LocalMap.h
Backend/Utility/: AlignedVector.h  MultiThread.h  Timer.h  Utility.h  simd_sse_neon.h
Frontend/: CMakeLists.txt  CameraBase.cpp  ORBextractor.cc  ORBextractor.h  ParamsInit.h  basic_datatype.h  feature_utils.cc  feature_utils.h  feature_utils_align.cc  feature_utils_direct_matcher.cc  feature_utils_feature_track.cc  feature_utils_uniformity.cc  feature_utils_warp.cc  iba_helper.cc  iba_helper.h  image_utils.cc  image_utils.h  param.cc  param.h  plotting_utils.cpp  plotting_utils.h  pose_viewer.cc  pose_viewer.h  t265imu.h  timer.h  xp_quaternion.cc  xp_quaternion.h  xppyramid.cpp  xppyramid.hpp
Frontend/cameras/: EquidistantDistortion.hpp  NCameraSystem.hpp  PinholeCamera.hpp
Frontend/cameras/implementation/: CameraBase.hpp  EquidistantDistortion.hpp  NCameraSystem.hpp  PinholeCamera.hpp  RadialTangentialDistortion.hpp  RadialTangentialDistortion8.hpp
Loopclosure/: CMakeLists.txt  FeatureMatcher.cpp  FeatureMatcher.h  KeyFrame.cpp  KeyFrame.h  LoopClosing.cpp  LoopClosing.h  PnpPoseEstimator.cpp  PnpPoseEstimator.h
cmake/: FindEigen.cmake  FindGFlags.cmake  FindGlog.cmake
config/: config_of_mono.txt  rviz_config.rviz
config/euroc/: cam0_pinhole.yaml  cam1_pinhole.yaml  euroc_mono_imu_config.yaml  euroc_stereo_imu_config.yaml
config/mynteye/: cam0_pinhole.yaml  cam1_pinhole.yaml  mynteye_mono_imu_config.yaml  mynteye_stereo_imu_config.yaml
config/realsense-t265/: cam0_pinhole.yaml  cam1_pinhole.yaml  t265_stereo_imu_config.yaml
config/t265-IROS/: cam0_pinhole.yaml  cam1_pinhole.yaml  t265_stereo_imu_config.yaml
launch/: ice_ba_rviz.launch
monoinit/: CMakeLists.txt
monoinit/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h
monoinit/factor/: integration_base.h
monoinit/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
ros_visualization/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
scripts/: run_backend_only.sh  run_ice_ba_ros.sh  run_ice_ba_stereo.sh  run_ice_ba_stereo_ros.sh
